k8s/my-gateway/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-gateway-service
spec:
  selector:
    app: my-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
